<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".user.UserFragment">

    <data>
        <variable
            name="viewModel"
            type = "com.example.fruitshop.user.UserViewModel"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_user"
            android:textColor="@color/blue_104d89"
            android:textSize="26sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/user_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/blue_104d89"
            android:ems="10"
            android:hint="@string/user"
            android:padding="16dp" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue_104d89"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_104d89"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="35dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_104d89"
                android:text="@string/sing_up" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_user_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:text="" />

        <Button
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/red_cc0000"
            android:text="@string/log_out"/>

    </LinearLayout>
</layout>